force-app/main/default/objects/LudoBoard__c/LudoBoard__c.object-meta.xml
<CustomObject>
    <label>Ludo Board</label>
    <nameField>
        <displayFormat>Ludo-{0000}</displayFormat>
        <label>Ludo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ludo Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>