force-app/main/default/objects/LudoBoard__c/fields/isGameEnded__c.field-meta.xml
<CustomField>
    <fullName>isGameEnded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGameEnded</label>
    <type>Checkbox</type>
</CustomField>