force-app/main/default/objects/LudoBoard__c/fields/isGameStarted__c.field-meta.xml
<CustomField>
    <fullName>isGameStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Game Started</label>
    <type>Checkbox</type>
</CustomField>