force-app/main/default/objects/LudoBoard__c/fields/isPlayerSynced__c.field-meta.xml
<CustomField>
    <fullName>isPlayerSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPlayerSynced</label>
    <type>Checkbox</type>
</CustomField>