force-app/main/default/objects/LudoBoard__c/fields/joinedPlayerCount__c.field-meta.xml
<CustomField>
    <fullName>joinedPlayerCount__c</fullName>
    <label>joined Player Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>