force-app/main/default/objects/LudoBoard__c/fields/playerCount__c.field-meta.xml
<CustomField>
    <fullName>playerCount__c</fullName>
    <defaultValue>4</defaultValue>
    <label>playerCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>